@@ -1,27 +1,26 @@
 package br.com.juwer.bankapi.api.dto.assembler;
 
-import br.com.juwer.bankapi.api.dto.output.CustomerDTO;
+import br.com.juwer.bankapi.api.dto.output.ResumeCustomerDTO;
 import br.com.juwer.bankapi.domain.model.Customer;
 import lombok.RequiredArgsConstructor;
 import org.modelmapper.ModelMapper;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 @RequiredArgsConstructor
-public class CustomerAssembler {
+public class ResumeCustomerAssembler {
 
     private final ModelMapper mapper;
 
-    public CustomerDTO toModel(Customer customer) {
-        return mapper.map(customer, CustomerDTO.class);
+    public ResumeCustomerDTO toModel(Customer customer) {
+        return mapper.map(customer, ResumeCustomerDTO.class);
     }
 
-    public List<CustomerDTO> toCollectionModel(List<Customer> customers) {
+    public List<ResumeCustomerDTO> toCollectionModel(List<Customer> customers) {
         return customers.stream()
                 .map(this::toModel)
-                .collect(Collectors.toList());
+                .toList();
     }
 }
